Added some descriptive texts to the package.json file.

--- a/Day 1/m6-w7-d1-demo/react-app/package.json
+++ b/Day 1/m6-w7-d1-demo/react-app/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-app",
+  "name": "animated-bar-chart-using-react-move",
   "version": "0.1.0",
+  "description": "Bar chart with enter/leave/update transitions, built with React and react-move",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
